--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE HTML>
 <html>
-    <head>
 
-    </head>
-    <body>
-        <h1>LOOK ITS A TITLE </h1>
-    </body>
+<head>
+
+</head>
+
+<body>
+    <h1>LOOK ITS A TITLE </h1>
+
+    <!-- Load React. -->
+    <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
+    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+
+    <!-- Load our React component. -->
+    <script src="test_component.js"></script>
+
+</body>
+
 </html>
