--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-
+    <title>AA Stocks</title>
 </head>
 
 <body>
-    <h1>LOOK ITS A TITLE </h1>
+    <h1>#fundingsecured</h1>
 
     <!-- Load React. -->
     <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
