Progress on including React

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html>
-
+    <meta charset="UTF-8"> 
 <head>
     <title>AA Stocks</title>
 </head>
@@ -8,13 +8,18 @@
 <body>
     <h1>#fundingsecured</h1>
 
+    <div id="like_button_container"></div>
+
+    <shopping-list name="Mark" />
+
+
     <!-- Load React. -->
     <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
-    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+    <script type="text/jsx" src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+    <script type="text/jsx" src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
 
     <!-- Load our React component. -->
-    <script src="test_component.js"></script>
+    <script type="text/jsx" src="test_component.js"></script>
 
 </body>
 
