--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
 
     <!-- Converts JSX (React's weird hybrid language) to normal JS to be interpreted by a browser -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 </body>
 
 </html>
