Styling updates for SimpleQuote and navbar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar navbar-dark bg-dark">
 
         <!-- Navbar title -->
         <a class="navbar-brand" href="#">AA Stocks</a>
@@ -43,8 +43,8 @@
             </ul>
             <!-- Ticker symbol input and View Quote button -->
             <form class="form-inline input-group my-2">
-                <input class="form-control" type="search" placeholder="Enter ticker symbol">
-                <button class="btn btn-outline-success" type="submit">View Quote</button>
+                <input class="form-control remove-right-curves" type="search" placeholder="Enter ticker symbol">
+                <button class="btn btn-primary remove-left-curves" type="submit">View Quote</button>
             </form>
         </div>
 
