Deleted things, did some stuff, idk this push is a mess

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <!-- SCRIPT LOADING BELOW HERE -->
 
     <!-- Loads our React components -->
-    <script type="text/jsx" src="react_components.js"></script>
+    <script type="text/jsx" src="app.js"></script>
 
     <!-- Load Boostrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
