--- a/app.html
+++ b/app.html
@@ -13,7 +13,7 @@
         crossorigin="anonymous">
 
     <!-- Load site.css -->
-    <link rel="stylesheet" href="site.css">
+    <link rel="stylesheet" href="app.css">
 </head>
 
 <body>
